refactor(springboot-example):重构示例项目
- 更新 Spring Boot 版本至 3.4.1
- 升级 Java 版本至 21
- 更新依赖库版本: - hutool: 5.8.27 -> 5.8.35
  - mapstruct: 1.6.0.Beta1 -> 1.6.3
  - mybatis-plus: 3.5.6 -> 3.5.10.1
  - sa-token:1.37.0 ->1.39.0 - bouncycastle: 1.77 -> 1.79
- 移除部分依赖库:
  - bean-searcher - fastjson2
  - knife4j
- 新增: - spring-boot-starter-undertow
- 优化配置文件结构
- 重构代码:
  - 异常处理
  - 用户注册和登录逻辑
  - 数据库查询优化
- 更新单元测试